[gd_scene load_steps=13 format=3 uid="uid://d3rslqjp1jmw3"]

[ext_resource type="PackedScene" uid="uid://4ai6vir54dk" path="res://Characters/Player/Player.tscn" id="1_h2yge"]
[ext_resource type="Script" uid="uid://c8j78g7486k80" path="res://Main.gd" id="1_lquwl"]
[ext_resource type="Script" uid="uid://fhrern8kenip" path="res://Scripts/UI.gd" id="2_5vw27"]
[ext_resource type="PackedScene" uid="uid://clknn5g32rxf2" path="res://Environment/Environment.tscn" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://bwqg1ob5ouaev" path="res://UI/Inventory.tscn" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://dv75mvpjsh4ig" path="res://Scripts/DeathDialog.gd" id="4_kek77"]
[ext_resource type="PackedScene" uid="uid://cbs55uqoe566p" path="res://Items/ball.tscn" id="6_7mycd"]
[ext_resource type="PackedScene" uid="uid://st3sqvn8803" path="res://Characters/Spawner/MobSpawner.tscn" id="8_5vw27"]
[ext_resource type="Script" uid="uid://dr4du3v8f582o" path="res://Scripts/BulletPool.gd" id="10_4c57u"]
[ext_resource type="PackedScene" uid="uid://cnm5pwewcad0j" path="res://Environment/DeathZone.tscn" id="11_efxa6"]
[ext_resource type="PackedScene" path="res://UI/PauseMenu.tscn" id="11_pause"]

[sub_resource type="LabelSettings" id="LabelSettings_272bh"]
line_spacing = 1.0
font_size = 25
font_color = Color(0, 0, 0, 1)

[node name="Main" type="Node3D" groups=["world"]]
script = ExtResource("1_lquwl")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_5vw27")

[node name="Inventory" parent="UI" instance=ExtResource("4_1bvp3")]
unique_name_in_owner = true
layout_mode = 1

[node name="DeathDialog" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -112.0
offset_right = 276.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_kek77")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DeathDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 27.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Message" type="Label" parent="UI/DeathDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Message Go Here"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="UI/DeathDialog/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="ReviveButton" type="Button" parent="UI/DeathDialog/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Revive"
flat = true

[node name="RespawnButton" type="Button" parent="UI/DeathDialog/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Respawn"

[node name="Stats" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 313.0
offset_bottom = 246.0

[node name="LiveEnemies" type="Label" parent="UI/Stats"]
layout_mode = 2
size_flags_vertical = 0
text = "Live Enemies:"
label_settings = SubResource("LabelSettings_272bh")
vertical_alignment = 1
uppercase = true

[node name="Health" type="Label" parent="UI/Stats"]
layout_mode = 2
size_flags_vertical = 0
text = "Player Health:"
label_settings = SubResource("LabelSettings_272bh")
uppercase = true

[node name="BulletsFired" type="Label" parent="UI/Stats"]
layout_mode = 2
size_flags_vertical = 0
text = "Bullets Fired:"
label_settings = SubResource("LabelSettings_272bh")
uppercase = true

[node name="Environment" parent="." instance=ExtResource("3_1bvp3")]

[node name="Player" parent="." instance=ExtResource("1_h2yge")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.247713, 1.05, 0.385427)

[node name="Ball" parent="." instance=ExtResource("6_7mycd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.73747, 0.55, 3.7728)

[node name="Ball2" parent="." instance=ExtResource("6_7mycd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.00219, 0.549999, 1.89637)

[node name="Ball3" parent="." instance=ExtResource("6_7mycd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.20205, 0.55, -0.689815)

[node name="MobSpawner" parent="." instance=ExtResource("8_5vw27")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.417, 0.0499992, -8.3417)

[node name="BulletPool" type="Node" parent="."]
script = ExtResource("10_4c57u")

[node name="PauseMenu" parent="." instance=ExtResource("11_pause")]

[node name="DeathZone" parent="." instance=ExtResource("11_efxa6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
hazard_type = 2
